--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Level-Up⚡ Gamer | Tu Tienda Gaming Online</title>
-    <meta name="description" content="Level-Up Gamer - La mejor tienda online de productos gaming. Consolas, accesorios, juegos de mesa y más al mejor precio." />
-    <meta name="author" content="Level-Up Gamer" />
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Level-Up⚡ Gamer | Tu Tienda Gaming Online</title>
+  <meta name="description" content="Level-Up Gamer - La mejor tienda online de productos gaming. Consolas, accesorios, juegos de mesa y más al mejor precio." />
+  <meta name="author" content="Level-Up Gamer" />
 
-    <meta property="og:title" content="Level-Up⚡ Gamer | Tu Tienda Gaming Online" />
-    <meta property="og:description" content="Todo lo que necesitas para tu setup gamer al mejor precio" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:title" content="Level-Up⚡ Gamer | Tu Tienda Gaming Online" />
+  <meta property="og:description" content="Todo lo que necesitas para tu setup gamer al mejor precio" />
+  <meta property="og:type" content="website" />
+    <meta property="og:image" content="/img/levelup-og-image" /> 
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  
-  
-  </head>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@levelupgamer" /> 
+    <meta name="twitter:image" content="/img/levelup-og-image" />
+ 
+ </head>
 
   <body>
     <div id="root"></div>
